Uyuni IU Guide titles alignment and tidy-up.

--- a/modules/installation-and-upgrade/pages/client-intro.adoc
+++ b/modules/installation-and-upgrade/pages/client-intro.adoc
@@ -1,5 +1,5 @@
 [[client-upgrade]]
-= Upgrade the Clients
+= Upgrade Clients
 
 
 Clients use the versioning system of their underlying operating system.
