--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers]]
-= Deploy a {productname} {productnumber} Proxy
+= {productname} Proxy Deployment on {leapmicro} {microversion}
 ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
