--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers-k3s-uyuni]]
-= Install Containerized {productname} Proxy on k3s
+= {productname} Proxy Deployment on K3s
 ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
