--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -1,4 +1,4 @@
-= Deploy {productname} on {leapmicro} {microversion}
+= {productname} Server Deployment on {leapmicro} {microversion}
 ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
