--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -1,4 +1,4 @@
-= Server Upgrade
+= {productname} Server Upgrade
 
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgradm`` tool first.
 
