--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -24,12 +24,12 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 ** Deployment and Installation
 *** Server
-**** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Deploy on {leapmicro}]
+**** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Server Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc[Air-gapped Deployment]
 *** Proxy
-**** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Proxy Preparation]
-**** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Deploy on {leapmicro}]
-**** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Deploy on K3s]
+**** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Containerized {productname} Proxy Setup]
+**** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Proxy Deployment on {leapmicro}]
+**** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Proxy Deployment on K3s]
 endif::[]
 
 ifeval::[{suma-content} == true]
