--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -63,11 +63,14 @@ systemctl stop postgresql
 ----
 ssh-keygen -t rsa
 ----
-. The SSH configuration and agent should be ready on the new server host for a passwordless connection to the legacy server.
+. The SSH configuration and agent should be ready on the new server host for a connection to the legacy server that does not prompt for a password.
 +
+----
+eval $(ssh-agent); ssh-add
+----
 [NOTE]
 ====
-To establish a passwordless connection, the migration script relies on an SSH agent running on the new server.
+To establish a connection without prompting for a password, the migration script relies on an SSH agent running on the new server.
 If the agent is not active yet, initiate it by running [command]``eval $(ssh-agent)``.
 Then add the SSH key to the running agent with [command]``ssh-add`` followed by the path to the private key.
 You will be prompted to enter the password for the private key during this process.
