--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -74,9 +74,9 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 ** Basic Server Management
-*** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML configuration with mgradm]
-*** xref:container-management/start-and-stop-containers.adoc[Start and stop the container]
-*** xref:container-management/persistent-container-volumes.adoc[Persistent container volumes]
+*** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML Configuration with mgradm]
+*** xref:container-management/start-and-stop-containers.adoc[Starting and Stopping Containers]
+*** xref:container-management/persistent-container-volumes.adoc[Persistent Container Volumes]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
