--- a/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
@@ -1,5 +1,5 @@
 [[persistant-volume-list]]
-= List of persistent storage volumes
+= Persistent Container Volumes
 
 Modifications performed within containers are not retained.
 Any alterations made outside of persistent volumes will be discarded.
