--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-container-setup-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-container-setup-uyuni.adoc
@@ -6,15 +6,16 @@ endif::[]
 
 Once container host for {productname} Proxy containers is prepared, setup of containers require few additional steps to finish configuration.
 
-1. Generate {productname} Proxy configuration archive file
-2. Transfer configuration archive to the container host prepared in installation step and extract it
-3. Start the proxy sevices with [literal]``mgrpxy``
+.Procedure:
+. Generate {productname} Proxy configuration archive file
+. Transfer configuration archive to the container host prepared in installation step and extract it
+. Start the proxy sevices with [literal]``mgrpxy``
 
 
 include::../generate_proxy_config.adoc[]
 
 [[proxy-setup-containers-transfer-config]]
-== Transfer {productname} Proxy configuration
+== Transfer {productname} Proxy Configuration
 
 Both [command]``spacecmd`` command  and {webui} ways generate a configuration archive.
 This archive needs to be made available on container host.
@@ -23,8 +24,9 @@ Transfer this generated archive to the container host.
 
 For installation instructions to use the archive to get the proxy containers, see xref:installation-and-upgrade:container-deployment/uyuni/proxy-container-installation-uyuni.adoc[].
 
+
 [[proxy-setup-containers-transfer-start]]
-== Start {productname} Proxy containers
+== Start {productname} Proxy Containers
 
 Container can now be started with the [literal]`mgrpxy` command:
 
