(HW2024 cleanup) Uyuni IU Guide titles alignment and tidy-up (#3463)
* Uyuni IU Guide titles alignment and tidy-up.

* Cont.

* Cont.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -24,12 +24,12 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 ** Deployment and Installation
 *** Server
-**** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Deploy on {leapmicro}]
+**** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Server Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc[Air-gapped Deployment]
 *** Proxy
-**** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Proxy Preparation]
-**** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Deploy on {leapmicro}]
-**** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Deploy on K3s]
+**** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Containerized {productname} Proxy Setup]
+**** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Proxy Deployment on {leapmicro}]
+**** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Proxy Deployment on K3s]
 endif::[]
 
 ifeval::[{suma-content} == true]
@@ -74,9 +74,9 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 ** Basic Server Management
-*** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML configuration with mgradm]
-*** xref:container-management/start-and-stop-containers.adoc[Start and stop the container]
-*** xref:container-management/persistent-container-volumes.adoc[Persistent container volumes]
+*** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML Configuration with mgradm]
+*** xref:container-management/start-and-stop-containers.adoc[Starting and Stopping Containers]
+*** xref:container-management/persistent-container-volumes.adoc[Persistent Container Volumes]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
