Random additional tidy-ups.

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc
@@ -9,29 +9,30 @@ Air-gapped deployment refers to the setup and operation of any networked system 
 
 You can easily deploy container images using [systemitem]``Podman``, [systemitem]``Docker``, or [systemitem]``Skopeo`` on a machine with internet access. 
 
-Pull the desired image then, save the image as a tar archive. For example:
-
+.Procedure
+. Pull the desired image, then save the image as a [literal]``tar`` archive. 
+For example:
++
 .Podman
 ----
 podman pull registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
 podman save --output server.tar registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
 ----
-
++
 .Docker
 ----
 docker pull registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
 docker save --output server.tar registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
 ----
-
-
++
 .Skopeo
 ----
 skopeo copy docker://registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0 docker-archive:server.tar:registry.suse.com/suse/manager/5.0/x86_64/server:5.0.0
 ----
-
-Transfer the resulting [filename]``server-image.tar`` to the Server container host and load it using the following command:
-
-.Load the Server Image
++
+. Transfer the resulting [filename]``server-image.tar`` to the Server container host and load it using the following command:
++
+.Load the server image
 ----
 podman load -i server.tar
 ----
