--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -1,24 +1,22 @@
-= Deployment and Upgrade Guide Overview
-
+= Installation, Deployment and Upgrade Guide Overview
 **Updated:** {docdate}
 
+
 This book provides guidance on deploying and upgrading {productname} Server and Proxy.
+
 It is split into the following sections:
 
 Requirements::
 Describes hardware, software, and networking requirements before you begin.
 
-
 Deployment::
 Describes tasks for deploying {productname} as a container and initial setup.
 
-
 Upgrade and Migration::
-Describes upgrade and migration of {productname} 
-
+Describes upgrade and migration of {productname}.
 
 Public Cloud::
-You can also deploy {productname} to a public cloud instance.
-
+Describes deployment of {productname} to a public cloud instance.
++
 For more information on using {productname} on a public cloud, see xref:specialized-guides:public-cloud-guide/overview.adoc[].
 
