--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -89,7 +89,7 @@ To guarantee that clients can resolve the FQDN domain name, both the containeriz
 ====
 
 
-== Installing Uyuni Tools for Use with Containers
+== Installing Uyuni Tools for Use With Containers
 
 
 .Procedure: Installing Uyuni Tools on {leapmicro} {microversion}
