--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc
@@ -6,20 +6,21 @@ endif::[]
 
 
 [[installation-proxy-containers-k3s-k3s]]
-== Installing k3s
+== Installing K3s
 
-On the container host machine, install [literal]``k3s`` (replace [literal]``<K3S_HOST_FQDN>`` with the FQDN of your k3s host):
+On the container host machine, install [literal]``K3s`` (replace [literal]``<K3S_HOST_FQDN>`` with the FQDN of your K3s host):
 
 ----
 curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san=<K3S_HOST_FQDN>" sh -
 ----
 
+
 [[installation-proxy-containers-k3s-helm]]
-== Installing tools
+== Installing Tools
 
 The installation requires the [literal]``mgrpxy`` and [literal]``helm`` packages.
 
-For Helm, you can install it using the installer script:
+Install Helm by using the installer script:
 ----
 curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
 chmod 700 get_helm.sh
@@ -28,21 +29,24 @@ chmod 700 get_helm.sh
 
 For more information, see https://helm.sh/docs/intro/install/#from-script.
 
-The [literal]``mgrpxy`` package is available in the container utils repository: pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/.
+The [literal]``mgrpxy`` package is available in the container utils repository.
+Pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/.
 
-. To install them on Leap Micro run:
+.Procedure
+. To install package on Leap Micro run:
 +
 ----
 transactional-update pkg install mgrpxy
 ----
+. Reboot.
 
-. Reboot
+
 
 [[installation-proxy-containers-k3s-deploy]]
-== Deploying the {productname} proxy helm chart
+== Deploying the {productname} Proxy Helm Chart
 
 To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims.
-If you do not customize the storage configuration, k3s will automatically create the storage volumes for you.
+If you do not customize the storage configuration, K3s will automatically create the storage volumes for you.
 
 The persistent volume claims are named:
 
@@ -57,4 +61,7 @@ Copy the configuration [literal]``tar.gz`` file and then install:
 mgrpxy install kubernetes /path/to/config.tar.gz
 ----
 
-For more information see link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/[] (kubernetes) or link:https://rancher.com/docs/k3s/latest/en/storage/[] (k3s) documentation.
+For more information see:
+
+* link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/[] (Kubernetes)
+* link:https://rancher.com/docs/k3s/latest/en/storage/[] (K3s) documentation
