--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -74,7 +74,7 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 ** Basic Server Management
-*** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML Configuration with mgradm]
+*** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML Configuration With mgradm]
 *** xref:container-management/start-and-stop-containers.adoc[Starting and Stopping Containers]
 *** xref:container-management/persistent-container-volumes.adoc[Persistent Container Volumes]
 
