--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -84,16 +84,20 @@ The migration process will take care of the server installation.
 ----
 ssh-keygen -t rsa
 ----
-. The SSH configuration and agent should be ready on the new server for a passwordless connection to the 4.3 server.
+. The SSH configuration and agent should be ready on the new server for a connection to the 4.3 server that does not prompt for a password.
++
+----
+eval $(ssh-agent); ssh-add
+----
 +
 [NOTE]
 ====
-To establish a passwordless connection, the migration script relies on an SSH agent running on the new server.
+To establish a connection that does not prompt for a password, the migration script relies on an SSH agent running on the new server.
 If the agent is not active yet, initiate it by running [command]``eval $(ssh-agent)``.
 Then add the SSH key to the running agent with [command]``ssh-add`` followed by the path to the private key.
 You will be prompted to enter the password for the private key during this process.
 ====
-
++
 . Copy the public SSH key to the {productname} 4.3 Server ([literal]``<oldserver.fqdn>``) with [command]``ssh-copy-id``.
   Replace [literal]``<oldserver.fqdn>`` with the FQDN of the 4.3 server:
 +
