Change more titles.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-migration-suma.adoc
@@ -36,7 +36,7 @@ Because in-place migration is not supported, the users must deploy a new {produc
 Before migrating the clients, ensure that the new proxy is already deployed and fully functional.
 ====
 
-.Procedure: Migrating Client between Proxies
+.Procedure: Migrating Client Between Proxies
 . Log in to the {productname} Server {webui}.
 . From the left navigation, select menu:Systems[Systems List].
 . Navigate to the old 4.3 proxy page, and click the [guimenu]``Proxy`` tab.
