--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -234,9 +234,9 @@ For more information, see
 
 
 [[deploy-suma-server-mgradm]]
-== Deploy with mgradm
+== Deploy with [literal]``mgradm``
 
-.Procedure: Deploy {productname} {productnumber} Using mgradm
+.Procedure: Deploying {productname} {productnumber} Using [literal]``mgradm``
 . Log in as root.
 . Execute the following command, replacing `<suma.example.com>` with your fully qualified domain name:
 +
@@ -293,6 +293,7 @@ systemctl enable --now transactional-update.timer
 In this guide you deployed {productname} {productnumber} Server as a container.
 Proceed to the next section to add your organization credentials for syncing with {scc}.
 
+
 == Connect {productname} {productnumber} to {scc}
 
 This section covers synchronizing with SCC from the {webui} and adding your first client channel.
@@ -344,7 +345,7 @@ For more instructions, see xref:client-configuration:registration-overview.adoc[
 
 
 
-== Entering the container for management
+== Entering the Container for Management
 
 To get to a shell inside the container, run on the container host:
 ----
