--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers]]
-= Deploy a {productname} {productnumber} Proxy on {sle-micro}
+= {productname} {productnumber} Proxy Deployment on {sle-micro}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
