--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vm]]
-= Deploy {productname} {productnumber} Proxy as a Virtual Machine - KVM
+= {productname} {productnumber} Proxy Deployment as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
