--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers-k3s]]
-= Install Containerized {productname} Proxy on K3s
+= {productname} {productnumber}  Proxy Deployment on K3s
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
