--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[deploy-suma-server]]
-= Deploy {productname} {productnumber} Server on {sle-micro}
+= {productname} {productnumber} Server Deployment on {sle-micro}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
