--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
 [[install-vm-kvm]]
-= Deploy {productname} {productnumber} Server as a Virtual Machine - KVM
+= {productname} {productnumber} Server Deployment as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
