--- a/modules/installation-and-upgrade/pages/install-pubcloud.adoc
+++ b/modules/installation-and-upgrade/pages/install-pubcloud.adoc
@@ -1,5 +1,5 @@
 [[install-pubcloud]]
-= {productname} Server and the Public Cloud
+= Public Cloud Deployment
 
 Public clouds provide {productname} under a {byoslongform} ({byos}) or {payglongform} ({payg}) models.
 
