--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -35,17 +35,17 @@ endif::[]
 ifeval::[{suma-content} == true]
 ** Installation and Deployment
 *** Server
-**** xref:container-deployment/suma/server-deployment-suma.adoc[Deploy {productname} on {sle-micro}]
-**** xref:container-deployment/suma/server-deployment-vm-suma.adoc[Deploy Virtual Machine - KVM]
-**** xref:container-deployment/suma/server-deployment-vmdk-suma.adoc[Deploy Virtual Machine - VMware]
+**** xref:container-deployment/suma/server-deployment-suma.adoc[{productname} Deployment on {sle-micro}]
+**** xref:container-deployment/suma/server-deployment-vm-suma.adoc[Deployment as Virtual Machine - KVM]
+**** xref:container-deployment/suma/server-deployment-vmdk-suma.adoc[Deployment as Virtual Machine - VMware]
 **** xref:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
 
 *** Proxy
-**** xref:container-deployment/suma/proxy-deployment-suma.adoc[Deploy {productname} Proxy on {sle-micro}]
-**** xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Deploy Virtual Machine - KVM]
-**** xref:container-deployment/suma/proxy-deployment-vmdk-suma.adoc[Deploy Virtual Machine - VMware]
-**** xref:container-deployment/suma/proxy-k3s-deployment-suma.adoc[Deploy on K3s]
+**** xref:container-deployment/suma/proxy-deployment-suma.adoc[{productname} Proxy Deployment on {sle-micro}]
+**** xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Proxy Deployment as Virtual Machine - KVM]
+**** xref:container-deployment/suma/proxy-deployment-vmdk-suma.adoc[Proxy Deployment Virtual Machine - VMware]
+**** xref:container-deployment/suma/proxy-k3s-deployment-suma.adoc[Proxy Deployment on K3s]
 **** xref:container-deployment/suma/proxy-air-gapped-deployment-suma.adoc[Air-gapped Deployment]
 endif::[]
 
