--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -1,5 +1,5 @@
 [[install-vm-vmware]]
-= Deploy {productname} {productnumber} Server as a Virtual Machine - VMware
+= {productname} {productnumber} Server Deployment as a Virtual Machine - VMware
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
