Document openSUSE Leap 16.0

--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -2,7 +2,7 @@
 = Registering {opensuse} Leap Clients
 
 This section contains information about registering clients running {opensuse} operating systems.
-{productname} supports {opensuse} Leap 15 clients using {salt}.
+{productname} supports {opensuse} Leap 15 and {opensuse} Leap 16 clients using {salt}.
 
 Bootstrapping is supported for starting {opensuse} clients and performing initial state runs such as setting repositories and performing profile updates.
 
@@ -12,7 +12,11 @@ Bootstrapping is supported for starting {opensuse} clients and performing initia
 
 Before you register {opensuse} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
-The architectures currently supported are: `x86_64` and `aarch64`.
+The architectures currently supported are:
+
+* {opensuse} Leap 15: `x86_64` and `aarch64`
+* {opensuse} Leap 16: `x86_64`, `aarch64`, `s390x`, and `ppc64le`
+
 For full list of supported products and architectures, see xref:client-configuration:supported-features.adoc[].
 
 include::snippets/arch-other-note.adoc[]
@@ -28,6 +32,9 @@ ifeval::[{suma-content} == true]
 
 | OS Version
 | Product Name
+
+| {opensuse} Leap 16.0
+| {opensuse} Leap 16.0 x86_64
 
 | {opensuse} Leap 15.6
 | {opensuse} Leap 15.6 x86_64
@@ -51,6 +58,7 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
+| {opensuse} Leap 16.0 | opensuse-leap-16.0-pool
 | {opensuse} Leap 15.6 | opensuse-leap-15.6-pool
 | {opensuse} Leap 15.5 | opensuse-leap-15.5-pool
 | {opensuse} Leap 15.4 | opensuse-leap-15.4-pool
@@ -64,18 +72,18 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 [[opensuse-leap-channels-cli]]
-[cols="1,1,1,1"]
+[cols="1,1,1,1,1"]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version               | {opensuse} Leap 15.6               | {opensuse} Leap 15.5               | {opensuse} Leap 15.4
-| Base Channel             | opensuse_leap15_6                  | opensuse_leap15_5                  | opensuse_leap15_4
-| Client Channel           | opensuse_leap15_6-uyuni-client     | opensuse_leap15_5-uyuni-client     | opensuse_leap15_4-uyuni-client
-| Updates Channel          | opensuse_leap15_6-updates          | opensuse_leap15_5-updates          | opensuse_leap15_4-updates
-| Non-OSS Channel          | opensuse_leap15_6-non-oss          | opensuse_leap15_5-non-oss          | opensuse_leap15_4-non-oss
-| Non-OSS Updates Channel  | opensuse_leap15_6-non-oss-updates  | opensuse_leap15_5-non-oss-updates  | opensuse_leap15_4-non-oss-updates
-| Backports Updates Channel| opensuse_leap15_6-backports-updates| opensuse_leap15_5-backports-updates| opensuse_leap15_4-backports-updates
-| SLE Updates Channel      | opensuse_leap15_6-sle-updates      | opensuse_leap15_5-sle-updates      | opensuse_leap15_4-sle-updates
+| OS Version               | {opensuse} Leap 16.0               | {opensuse} Leap 15.6               | {opensuse} Leap 15.5               | {opensuse} Leap 15.4
+| Base Channel             | opensuse_leap16_0                  | opensuse_leap15_6                  | opensuse_leap15_5                  | opensuse_leap15_4
+| Client Channel           | opensuse_leap16_0-uyuni-client     | opensuse_leap15_6-uyuni-client     | opensuse_leap15_5-uyuni-client     | opensuse_leap15_4-uyuni-client
+| Updates Channel          |                                    | opensuse_leap15_6-updates          | opensuse_leap15_5-updates          | opensuse_leap15_4-updates
+| Non-OSS Channel          |                                    | opensuse_leap15_6-non-oss          | opensuse_leap15_5-non-oss          | opensuse_leap15_4-non-oss
+| Non-OSS Updates Channel  |                                    | opensuse_leap15_6-non-oss-updates  | opensuse_leap15_5-non-oss-updates  | opensuse_leap15_4-non-oss-updates
+| Backports Updates Channel|                                    | opensuse_leap15_6-backports-updates| opensuse_leap15_5-backports-updates| opensuse_leap15_4-backports-updates
+| SLE Updates Channel      |                                    | opensuse_leap15_6-sle-updates      | opensuse_leap15_5-sle-updates      | opensuse_leap15_4-sle-updates
 
 |===
 
