--- a/modules/client-configuration/pages/supported-features-sles.adoc
+++ b/modules/client-configuration/pages/supported-features-sles.adoc
@@ -1,8 +1,8 @@
 [[supported-features-sles]]
-= Supported {slsa} and {opensuse} Features
+= Supported {slsa} and {opensuse} Leap Features
 
 
-This table lists the availability of various features on {suse} and {opensuse} clients.
+This table lists the availability of various features on {suse} and {opensuse} Leap clients.
 This table covers all variants of the {sle} operating system, including {slsa}, {sleda}, {sles} for SAP, and {sles} for HPC.
 
 [IMPORTANT]
@@ -19,16 +19,18 @@ The icons in this table indicate:
 * {question} the feature is under consideration, and may or may not be made available at a later date
 
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header"]
 .Supported Features on {suse} and {opensuse} Operating Systems
 |===
 
 | Feature
 | {sle}{nbsp}12
 | {sle}{nbsp}15
-| {opensuse}{nbsp}15
+| {opensuse} Leap {nbsp}15
+| {opensuse} Leap {nbsp}16
 
 | Client
+| {check}
 | {check}
 | {check}
 | {check}
@@ -37,8 +39,10 @@ The icons in this table indicate:
 | {suse}
 | {suse}
 | {opensuse} Community
+| {opensuse} Community
 
 | Registration
+| {check}
 | {check}
 | {check}
 | {check}
@@ -47,8 +51,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Apply patches
+| {check}
 | {check}
 | {check}
 | {check}
@@ -57,8 +63,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System package states
+| {check}
 | {check}
 | {check}
 | {check}
@@ -67,8 +75,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Group custom states
+| {check}
 | {check}
 | {check}
 | {check}
@@ -77,8 +87,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System set manager (SSM)
+| {check}
 | {check}
 | {check}
 | {check}
@@ -87,8 +99,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Basic Virtual Guest Management {star}
+| {check}
 | {check}
 | {check}
 | {check}
@@ -97,13 +111,16 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Virtual Guest Installation ({ay}), as Host OS
 | {cross}
 | {cross}
 | {cross}
+| {check}
 
 | Virtual Guest Installation (image template), as Host OS
+| {check}
 | {check}
 | {check}
 | {check}
@@ -112,8 +129,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System deployment (PXE/{ay})
+| {check}
 | {check}
 | {check}
 | {check}
@@ -122,13 +141,16 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Contact methods
 | {cross}
 | {cross}
 | {check} ZeroMQ, Salt-SSH
+| {check} ZeroMQ, Salt-SSH
 
 | Works with {productname} Proxy
+| {check}
 | {check}
 | {check}
 | {check}
@@ -137,8 +159,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Staging (pre-download of packages)
+| {check}
 | {check}
 | {check}
 | {check}
@@ -147,8 +171,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | CVE auditing
+| {check}
 | {check}
 | {check}
 | {check}
@@ -157,8 +183,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Package verification
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -167,8 +195,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System locking
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -177,8 +207,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | System snapshot
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -187,8 +219,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Package profiles
+| {check} Profiles supported, Sync not supported
 | {check} Profiles supported, Sync not supported
 | {check} Profiles supported, Sync not supported
 | {check} Profiles supported, Sync not supported
@@ -197,8 +231,10 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Monitoring server
+| {check}
 | {check}
 | {check}
 | {check}
@@ -207,13 +243,16 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {check}
+| {check}
 
 | Docker buildhost
 | {check}
 | {check}
 | {question}
+| {question}
 
 | Build Docker image with OS
+| {check}
 | {check}
 | {check}
 | {check}
@@ -222,13 +261,16 @@ The icons in this table indicate:
 | {check}
 | {question}
 | {question}
+| {question}
 
 | Build Kiwi image with OS
 | {check}
 | {question}
 | {cross}
+| {cross}
 
 | Recurring Actions
+| {check}
 | {check}
 | {check}
 | {check}
@@ -237,9 +279,11 @@ The icons in this table indicate:
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Yomi
 | {cross}
+| {check}
 | {check}
 | {check}
 
