--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -72,6 +72,12 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {opensuse} Leap 16
+| {check}
+| {check}
+| {check}
+| {check}
+
 | {sll} 9, 8, 7
 | {check}
 | {cross}
@@ -189,6 +195,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {cross}
 | {cross}
+| {check}
+| {cross}
+
+| {opensuse} Leap 16
+| {check}
+| {check}
+| {check}
 | {check}
 | {cross}
 
