--- a/modules/client-configuration/pages/registration-overview-opensuse.adoc
+++ b/modules/client-configuration/pages/registration-overview-opensuse.adoc
@@ -1,7 +1,7 @@
 [[opensuse-registration-overview]]
 = openSUSE Client Registration
 
-You can register {opensuse} and {leapmicro} clients to your {productname} Server.
+You can register {opensuse} Leap and {leapmicro} clients to your {productname} Server.
 The method and details varies depending on the operating system of the client.
 
 Before you start, ensure that the client has the date and time synchronized correctly with the {productname} Server.
