(HW2024 cleanup) IU Guide titles alignment and tidy-up (#3467)
* Change more titles.

* Cont.

* Cont.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-k3s-deployment-suma.adoc
@@ -1,27 +1,27 @@
 [[installation-proxy-containers-k3s]]
-= Install Containerized {productname} Proxy on k3s
+= {productname} {productnumber}  Proxy Deployment on K3s
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
 
 [[installation-proxy-containers-k3s-k3s]]
-== Installing k3s
+== Installing K3s
 
 [NOTE]
 ====
-{productname} Proxy is supported on k3s running on top of {sle-micro} in a single node cluster.
+{productname} Proxy is supported on K3s running on top of {sle-micro} in a single node cluster.
 If you need to deploy it in any other Kubernetes environment, please contact support for evaluation.
 ====
 
-On the container host machine, install [literal]``k3s`` (replace [literal]``<K3S_HOST_FQDN>`` with the FQDN of your k3s host):
+On the container host machine, install [literal]``K3s`` (replace [literal]``<K3S_HOST_FQDN>`` with the FQDN of your K3s host):
 
 ----
 curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san=<K3S_HOST_FQDN>" sh -
 ----
 
 [[installation-proxy-containers-k3s-helm]]
-== Installing tools
+== Installing Tools
 
 The installation requires the [literal]``mgrpxy`` and [literal]``helm`` packages.
 
@@ -46,11 +46,12 @@ transactional-update pkg install mgrpxy
 
 include::../generate_proxy_config.adoc[tags=generate-proxy-config-section]
 
+
 [[installation-proxy-containers-k3s-deploy]]
-== Deploying the {productname} proxy helm chart
+== Deploying the {productname} Proxy Helm Chart
 
 To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims.
-If you do not customize the storage configuration, k3s will automatically create the storage volumes for you.
+If you do not customize the storage configuration, K3s will automatically create the storage volumes for you.
 
 The persistent volume claims are named:
 
@@ -65,4 +66,4 @@ Copy the configuration [literal]``tar.gz`` file and then install:
 mgrpxy install kubernetes /path/to/config.tar.gz
 ----
 
-For more information see link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/[] (kubernetes) or link:https://rancher.com/docs/k3s/latest/en/storage/[] (k3s) documentation.
+For more information see link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/[] (kubernetes) or link:https://rancher.com/docs/k3s/latest/en/storage/[] (K3s) documentation.
