More titles fixes.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[deploy-suma-server]]
-= Deploy {productname} {productnumber} Server on {sle-micro}
+= {productname} {productnumber} Server Deployment on {sle-micro}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -41,6 +41,7 @@ These containers hold applications and their essential parts, such as libraries,
 This setup ensures applications run the same way in different environments.
 The container host supplies the necessary resources such as CPU, memory, and storage for these containers.
 ====
+
 
 [IMPORTANT]
 ====
@@ -118,7 +119,6 @@ For more information about preparing your machines (virtual or physical), see li
 +
 
 .Registering {productname} as an Extension during Installation
-
 [NOTE]
 ====
 The {productname} {productnumber} containers are installed as extensions.
@@ -187,7 +187,6 @@ transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <reg_code>
 
 === Update the System
 
-
 .Procedure
 . Log in as *root*.
 . Run **transactional-update**:
@@ -235,9 +234,9 @@ For more information, see
 
 
 [[deploy-suma-server-mgradm]]
-== Deploy with mgradm
+== Deploy with [literal]``mgradm``
 
-.Procedure: Deploy {productname} {productnumber} Using mgradm
+.Procedure: Deploying {productname} {productnumber} Using [literal]``mgradm``
 . Log in as root.
 . Execute the following command, replacing `<suma.example.com>` with your fully qualified domain name:
 +
@@ -294,6 +293,7 @@ systemctl enable --now transactional-update.timer
 In this guide you deployed {productname} {productnumber} Server as a container.
 Proceed to the next section to add your organization credentials for syncing with {scc}.
 
+
 == Connect {productname} {productnumber} to {scc}
 
 This section covers synchronizing with SCC from the {webui} and adding your first client channel.
@@ -345,7 +345,7 @@ For more instructions, see xref:client-configuration:registration-overview.adoc[
 
 
 
-== Entering the container for management
+== Entering the Container for Management
 
 To get to a shell inside the container, run on the container host:
 ----
