--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
 [[install-vm-kvm]]
-= Deploy {productname} {productnumber} Server as a Virtual Machine - KVM
+= {productname} {productnumber} Server Deployment as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -117,7 +117,7 @@ image::root-password.png[]
 
 
 
-== Register {sle-micro} and {productname} {productnumber} Server
+== Register {sl-micro} and {productname} {productnumber} Server
 
 // note for 5.0 backport: 5.0 should have sle-micro
 
@@ -126,12 +126,12 @@ image::root-password.png[]
 The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
 ====
 
-.Procedure: Registering {sle-micro} and {productname} {productnumber}
+.Procedure: Registering {sl-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
 +
 // note for 5.0 backport: 5.0 should have sle-micro
-. Register {sle-micro} with SCC.
+. Register {sl-micro} with SCC.
 +
 
 ----
