--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -29,7 +29,7 @@ endif::[]
   As a result, the fully qualified domain name (FQDN) of the new server will remain the same as that of the old server.
 
 * The IP address must remain unchanged to ensure that the clients can contact the server.
-+
++  
 [IMPORTANT]
 ====
 After the migration, it will be necessary to manually update the DHCP and DNS records to point to the new server.
@@ -54,6 +54,7 @@ As a result, the fully qualified domain name (FQDN) of the new server will remai
 Additionally, the IP address must remain unchanged to ensure that the clients can contact the server.
 After the migration, it will be necessary to manually update the DHCP and DNS records to point to the new server.
 ////
+
 
 == Migration
 
@@ -108,11 +109,9 @@ ssh-copy-id <old server.fqdn>
 The SSH key will be copied into the old server's [path]``~/.ssh/authorized_keys`` file.
 For more information, see the [literal]``ssh-copy-id`` manpage.
 +
-
 // . This step is optional:
 //   The migration script only uses the 4.3 server's FQDN in the SSH command.
 //   This means that every other configuration required to connect, needs to be defined in the [path]``~/.ssh/config`` file.
-
 . Establish an SSH connection from the new server to the old {productname} Server to check that no password is needed.
   Also there must not by any problem with the host fingerprint.
   In case of trouble, remove old fingerprints from the [path]``~/.ssh/known_hosts`` file.
@@ -126,6 +125,7 @@ For more information, see the [literal]``ssh-copy-id`` manpage.
 When planning your migration from {productname} 4.3 to {productname} 5.0, ensure that your target instance meets or exceeds the specifications of the old setup.
 
 This includes, but is not limited to, memory (RAM), CPU Cores, Storage, and Network Bandwidth.
+
 
 .Procedure: Performing the Migration
 . This step is optional.
@@ -151,6 +151,7 @@ This command will create the persistent storage volumes at [path]``/var/lib/cont
 
 For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
 ====
++
 . Execute the following command to install a new {productname} server.
   Replace [literal]``<oldserver.fqdn>`` with the FQDN of the 4.3 server:
 +
@@ -161,11 +162,8 @@ mgradm migrate podman <oldserver.fqdn>
 
 
 ==== Migration of the Certificates
-//[IMPORTANT]
-//====
 Trusted SSL CA certificates that were installed as part of an RPM and stored on {productname} 4.3 in the [path]``/usr/share/pki/trust/anchors/`` directory will not be migrated.
-Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the 4.3 installation after migration:
-
+Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the 4.3 installation after the migration.
 
 .Procedure: Migrating the Certificates
 . Copy the file from the 4.3 server to the new server.
@@ -175,7 +173,6 @@ Because {suse} does not install RPM packages in the container, the administrator
 ----
 mgrctl cp /local/ca.file server:/etc/pki/trust/anchors/
 ----
-//====
 
 
 [IMPORTANT]
