--- a/modules/client-configuration/pages/client-proxy-cli.adoc
+++ b/modules/client-configuration/pages/client-proxy-cli.adoc
@@ -1,5 +1,5 @@
 [[cli-client-proxy]]
-= Register Clients on the Command Line
+= Register Clients to a Proxy on the Command Line
 
 // FIXME: 2023-10-24, ke: is preinstalled Salt still required?  Salt bundle?
 
