--- a/modules/client-configuration/pages/client-proxy-webui.adoc
+++ b/modules/client-configuration/pages/client-proxy-webui.adoc
@@ -1,5 +1,5 @@
 [[salt-client-proxy]]
-= Register Clients to a Proxy with the {webui}
+= Register Clients to a Proxy With the {webui}
 
 You can register clients to the {productname} Proxy using the {webui}.
 
