--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -1,5 +1,5 @@
 [[registering.clients.bootstrap]]
-= Register Clients with a Bootstrap Script
+= Register Clients With a Bootstrap Script
 
 Registering clients with a bootstrap script gives you control over parameters, and can help if you have to register a large number of clients at once.
 
