--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -1,5 +1,5 @@
 [[virt-xenkvm]]
-= Virtualization with Xen and KVM
+= Virtualization With Xen and KVM
 
 Xen and KVM virtualized clients can be managed directly in {productname}.
 
